Ubah favicon, title, background, tambah logo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>IkanKita</title>
+	<title>ikankita</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -27,15 +27,13 @@
 	<div class="bg-gx size1 flex-w flex-col-c-sb p-l-15 p-r-15 p-t-55 p-b-35 respon1">
 		<span></span>
 		<div class="flex-col-c p-t-50 p-b-50">
-			<h3 class="l1-txt1 txt-center p-b-10">
+			<h3 class="l1-txt1 txt-center p-b-20">
 				Coming Soon
 			</h3>
 
-			<p class="txt-center l1-txt2 p-b-60">
-				Nantikan ikan kita di tempat Anda
-			</p>
+            <img class="p-b-40" src="images/ikankita-white-crop.png" alt="ikankita logo" height="160">
 
-			<div class="flex-w flex-c cd100 p-b-82">
+			<div class="flex-w flex-c cd100 p-b-20">
 				<div class="flex-col-c-m size2 how-countdown">
 					<span class="l1-txt3 p-b-9 days">35</span>
 					<span class="s1-txt1">Days</span>
@@ -56,6 +54,10 @@
 					<span class="s1-txt1">Seconds</span>
 				</div>
 			</div>
+
+            <p class="txt-center l1-txt2 p-b-20">
+				Nantikan ikan kita di tempat Anda
+			</p>
 
 			<!-- <button class="flex-c-m s1-txt2 size3 how-btn"  data-toggle="modal" data-target="#subscribe">
 				Follow us for update now!
